# firestore-rs

./: Cargo.toml  README.md
firestore/: Cargo.toml
firestore/src/: lib.rs
firestore/src/firestore/: client.rs  helper.rs  mod.rs  query.rs  raw.rs  request.rs
firestore/src/firestore/value/: fdoc.rs  ffields.rs  grpc_values.rs  mod.rs
firestore/src/firestore/value/fvalue/: de.rs  error.rs  json_conv.rs  mod.rs  ser.rs
firestore/src/grpc/: connection_point.rs  error.rs  mod.rs
firestore/src/grpc/auth/: mod.rs  scopes.rs
firestore/src/grpc/macros/: mod.rs
google-cloud-grpc-proto/: Cargo.toml  Makefile  build.rs
google-cloud-grpc-proto/script/: update_proto.sh
google-cloud-grpc-proto/src/: lib.rs
