[package]
name = "firestore"
version = "0.1.0"
authors = ["tacogips <me@tacogips.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-cloud-grpc-proto = { path = "../google-cloud-grpc-proto" }
yup-oauth2 = "5.0"
tokio = {version = "1.3" , features = ["full"]}
anyhow = "1.0"
futures = "0.3"
arc-swap = "1.2"
lazy_static = "1.4"
hyper = "0.14"
chrono = "0.4"
log = "0.4"
regex = "1.4"
serde = "1.0"
strum = {version = "0.20.0", features = ["derive"]}
strum_macros = "0.20"
futures-util = "0.3"
serde_json = "1.0"

backoff = {version="0.3",features = ["futures", "tokio"]}

[dev-dependencies]
uuid = { version="0.8" ,features =["v4", "serde"] }
tokio-test = "0.4"
serde_derive = "1.0"
